fixed spacing in chordline

--- a/canweb/view/static/view/css/view.css
+++ b/canweb/view/static/view/css/view.css
@@ -45,5 +45,6 @@
 .chordline {
   display: block;
   background: rgba(255, 255, 0, 0.1);
-  white-space:nowrap;
+  white-space: nowrap;
+  white-space: pre;
 }
